labels and input for all the things!

--- a/index.html
+++ b/index.html
@@ -4,9 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Character Sheet</title>
 </head>
 <body>
-    whatever some text
+    <form>
+        <h1>Character Sheet</h1>
+        <div id='characterInfo'>
+            <h2>Character Info</h2><!--do input tags for each stat-->
+            <fieldset>
+                <label>Character Name</label>
+                <input type='text'/>
+            </fieldset>
+            <fieldset>
+                <label>Player Name</label>
+                <input type='text'/>
+            </fieldset>
+            <fieldset>
+                <label>Class Level</label>
+                <input type='text'/>
+            </fieldset>
+            <fieldset>
+                <label>Race</label>
+                <input type='text'/>
+            </fieldset>
+            <fieldset>
+                <label>Background</label>
+                <input type='text'/>
+            </fieldset>
+            <fieldset>
+                <label>Experienece Points</label>
+                <input type='text'/>
+            </fieldset>
+        </div>
+         <div id='abilityScores'> <!--do label tags for each stat-->
+            <h2>Ability Scores and Modifiers</h2>
+            <fieldset>
+                <label>Strength <span class='score'></span><span class='modifier'></span></label>
+                <input type='text'/>
+            </fieldset>
+            <fieldset>
+                </label> Dexterity <span class='score'></span><span class='modifier'></span></label>
+                <input type='text'/>
+            </fieldset>
+            <fieldset>
+                Constitution <span class='score'></span><span class='modifier'></span></label>
+                <input type='text'/>
+            </fieldset>
+            <fieldset>
+                <label>Intelligence <span class='score'></span><span class='modifier'></span></label>
+                <input type='text'/>
+            </fieldset>
+            <fieldset>
+                <label>Wisdom <span class='score'></span><span class='modifier'></span></label>
+                <input type='text'/>
+            </fieldset>
+            <fieldset>
+                <label>Charisma <span class='score'></span><span class='modifier'></span></label>
+                <input type='text'/>
+            </fieldset>
+        </div>
+    </form>
 </body>
 </html>
