labels and input for all the things!

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                 <input type='text'/>
             </fieldset>
             <fieldset>
-                </label> Dexterity <span class='score'></span><span class='modifier'></span></label>
+                <label> Dexterity <span class='score'></span><span class='modifier'></span></label>
                 <input type='text'/>
             </fieldset>
             <fieldset>
-                Constitution <span class='score'></span><span class='modifier'></span></label>
+                <label>Constitution <span class='score'></span><span class='modifier'></span></label>
                 <input type='text'/>
             </fieldset>
             <fieldset>
